desktopdir = $(datadir)/applications
desktop_DATA = syx.desktop syximage.desktop

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = syx.png gnome-application-syx.png

appregdir = $(datadir)/application-registry
appreg_DATA = syx.applications

mimeinfodir = $(datadir)/mime-info
mimeinfo_DATA = syx.keys

mimedir = $(datadir)/mime
mime_DATA = syx.xml
