desktopdir = $(datadir)/applications
dist_desktop_DATA = syx.desktop syximage.desktop

pixmapsdir = $(datadir)/pixmaps
dist_pixmaps_DATA = syx.png gnome-application-syx.png

appregdir = $(datadir)/application-registry
dist_appreg_DATA = syx.applications

mimeinfodir = $(datadir)/mime-info
dist_mimeinfo_DATA = syx.keys

mimedir = $(datadir)/mime
dist_mime_DATA = syx.xml